--- a/SolickManagerV3_4/Windows/MainWindow.xaml
+++ b/SolickManagerV3_4/Windows/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:SolickManagerV3_4"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="720" Width="1280"
+        Title="MainWindow" MinHeight="720" MinWidth="1280"
+        MaxHeight="1080" MaxWidth="1920"
         Background="#FAFAFA">
     <Grid>
         <Grid.RowDefinitions>
@@ -14,7 +15,7 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Grid
-            Background="#17C3B2">
+            Background="#17C3B2" Height="40" VerticalAlignment="Top">
             <Menu Style="{DynamicResource MenuSolick}" VerticalAlignment="Center">
                 <MenuItem Header="Файл"/>
                 <MenuItem Header="Справка"/>
@@ -29,14 +30,56 @@
                    Foreground="White"
                    FontSize="20"
                    FontFamily="Inter/#Inter-V.ttf"/>
+            
             <Button Style="{DynamicResource ButtonMenu}"
                     HorizontalAlignment="Right"
                     Width="40"
                     Height="40"/>
+
+            
         </Grid>
 
         <Frame Grid.Row="1" 
                NavigationUIVisibility="Hidden" 
                Content="{Binding CurrentPage}"/>
+
+        <StackPanel x:Name="MenuStackPanel" 
+                    Width="300" 
+                    Visibility="Visible" 
+                    Orientation="Vertical" 
+                    MaxWidth="300" 
+                    HorizontalAlignment="Right" 
+                    VerticalAlignment="Top" 
+                    MinHeight="720"
+                    MaxHeight="1080"
+                    Background="#3993DD" 
+                    Grid.RowSpan="2">
+            <Grid Height="40">
+                <Button Style="{DynamicResource ButtonMenu}"
+                    HorizontalAlignment="Left"
+                    Width="40"
+                    Height="40"/>
+                <Label Content="{Binding CurrentPage.Worker}" 
+                   HorizontalAlignment="Left"
+                   VerticalContentAlignment="Center"
+                   Width="auto"
+                   Margin="40 3 0 0"
+                   Foreground="White"
+                   FontSize="20"
+                   FontFamily="Inter/#Inter-V.ttf"/>
+                <Button Background="Transparent" 
+                            Width="40" 
+                            Height="40"
+                            HorizontalAlignment="Right"
+                            BorderThickness="0">
+                    <Image Source="/Windows/Exit2.png" 
+                               Stretch="Fill" 
+                               Width="40" 
+                               Height="40"
+                               Margin="-1 -1 0 0"/>
+                </Button>
+            </Grid>
+            <Rectangle Width="300" Height="1" Fill="White" />
+        </StackPanel>
     </Grid>
 </Window>
