Добавлены: - выход на окно авторизации - сохранение "сессии" сотрудника - проверка на то, была ли сегодня смена у сотрудника -функция, получающая сегодняшнюю дату в формате DateOnly
Исправил:
-картинки теперь леат в папке Images, а не рядом с окнами

--- a/SolickManagerV3_4/Windows/AuthorizationWindow.xaml
+++ b/SolickManagerV3_4/Windows/AuthorizationWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Авторизация" Height="720" Width="1280">
+        Title="Авторизация" MinHeight="720" MinWidth="1280"
+        MaxHeight="1080" MaxWidth="1920">
     <Grid Background="#FAFAFA">
         <Border Visibility="{Binding Authorization}" VerticalAlignment="Center" HorizontalAlignment="Center" Width="350" Height="400" CornerRadius="10" Background="#17c3b2">
             <StackPanel >
