--- a/SolickManagerV3_4/App.xaml
+++ b/SolickManagerV3_4/App.xaml
@@ -393,7 +393,14 @@
             <Setter Property="TextWrapping" Value="Wrap"/>
         </Style>
 
-        
+
+        <Style x:Key="RightMenuElement" TargetType="{x:Type Border}">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#73BDFB"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
 
     </Application.Resources>
 </Application>
