--- a/SolickManagerV3_4/Windows/MainWindow.xaml
+++ b/SolickManagerV3_4/Windows/MainWindow.xaml
@@ -106,112 +106,136 @@
                     </Button>
                 </Grid>
                 <Rectangle Width="300" Height="1" Fill="White"/>
-                <StackPanel Height="30" Width="285" Margin="10 20 10 0" Orientation="Horizontal">
-                    <Image Source="/Windows/Images/Application.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Заявки"
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/Application.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Заявки"
                        VerticalContentAlignment="Center"
                        Width="auto"
                        Foreground="White"
                        FontSize="16"
                        FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
-                <StackPanel Height="30" Width="285" Margin="10 5 10 10" Orientation="Horizontal">
-                    <Image Source="/Windows/Images/Clients.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Клиенты и устройства"
+                    </StackPanel>
+                </Border>
+
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/Clients.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Клиенты и устройства"
                        VerticalContentAlignment="Center"
                        Width="auto"
                        Foreground="White"
                        FontSize="16"
                        FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
-                <Rectangle Width="250" Height="1" Fill="White" HorizontalAlignment="Left"/>
-                <StackPanel Height="30" Width="285" Margin="10 20 10 0" Orientation="Horizontal">
-                    <Image Source="/Windows/Images/Service.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Услуги"
-                       VerticalContentAlignment="Center"
-                       Width="auto"
-                       Foreground="White"
-                       FontSize="16"
-                       FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
-                <StackPanel Height="30" Width="285" Margin="10 5 10 0" Orientation="Horizontal">
-                    <Image Source="/Windows/Images/Assemblies.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Сборки и группы товаров"
-                       VerticalContentAlignment="Center"
-                       Width="auto"
-                       Foreground="White"
-                       FontSize="16"
-                       FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
-                <StackPanel Height="30" Width="285" Margin="10 5 10 10" Orientation="Horizontal">
-                    <Image Source="/Windows/Images/Produxts.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Товары"
-                       VerticalContentAlignment="Center"
-                       Width="auto"
-                       Foreground="White"
-                       FontSize="16"
-                       FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
+                    </StackPanel>
+                </Border>
                 <Rectangle Width="250" Height="1" Fill="White" HorizontalAlignment="Left"/>
 
-                <StackPanel Height="30" Width="285" Margin="10 20 10 10" Orientation="Horizontal">
-                    <Image Source="/Windows/Images/sklad.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Склад"
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/Service.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Услуги"
                        VerticalContentAlignment="Center"
                        Width="auto"
                        Foreground="White"
                        FontSize="16"
                        FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
-                <StackPanel Height="30" Width="285" Margin="10 5 10 10" Orientation="Horizontal">
-                    <Image Source="/Windows/Images/money.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Бухгалтерия"
+                    </StackPanel>
+                </Border>
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/Assemblies.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Сборки и группы товаров"
                        VerticalContentAlignment="Center"
                        Width="auto"
                        Foreground="White"
                        FontSize="16"
                        FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
-                <StackPanel Height="30" Width="285" Margin="10 5 10 10" Orientation="Horizontal">
-                    <Image Source="/Windows/Images/managment.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Менеджмент"
+                    </StackPanel>
+                </Border>
+                <Border Height="36" Width="280" Padding="3" Margin="10 20 10 0" CornerRadius="5" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/Produxts.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Товары"
                        VerticalContentAlignment="Center"
                        Width="auto"
                        Foreground="White"
                        FontSize="16"
                        FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
-                <StackPanel Height="30" Width="285" Margin="10 5 10 10" Orientation="Horizontal">
-                    <Image Source="/Windows/Images/otchet.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Отчёты"
+                    </StackPanel>
+                </Border>
+                <Rectangle Width="250" Height="1" Fill="White" HorizontalAlignment="Left"/>
+
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/sklad.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Склад"
                        VerticalContentAlignment="Center"
                        Width="auto"
                        Foreground="White"
                        FontSize="16"
                        FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
+                    </StackPanel>
+                </Border>
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/money.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Бухгалтерия"
+                       VerticalContentAlignment="Center"
+                       Width="auto"
+                       Foreground="White"
+                       FontSize="16"
+                       FontFamily="Inter/#Inter-V.ttf"/>
+                    </StackPanel>
+                </Border>
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/managment.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Менеджмент"
+                       VerticalContentAlignment="Center"
+                       Width="auto"
+                       Foreground="White"
+                       FontSize="16"
+                       FontFamily="Inter/#Inter-V.ttf"/>
+                    </StackPanel>
+                </Border>
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/otchet.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Отчёты"
+                       VerticalContentAlignment="Center"
+                       Width="auto"
+                       Foreground="White"
+                       FontSize="16"
+                       FontFamily="Inter/#Inter-V.ttf"/>
+                    </StackPanel>
+                </Border>
 
                 
             </StackPanel>
             <StackPanel DockPanel.Dock="Bottom" Height="auto" VerticalAlignment="Bottom">
-                <StackPanel Height="30" Width="285" Margin="10 10 10 10" Orientation="Horizontal" Visibility="Hidden">
-                    <Image Source="/Windows/Images/settings.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Настройки"
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/settings.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Настройки"
                        VerticalContentAlignment="Center"
                        Width="auto"
                        Foreground="White"
                        FontSize="16"
                        FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
-                <StackPanel Height="30" Width="285" Margin="10 5 10 30" Orientation="Horizontal" VerticalAlignment="Bottom" MouseLeftButtonDown="Exit">
-                    <Image Source="/Windows/Images/Exit2.png" Height="30" Width="30" HorizontalAlignment="Left"/>
-                    <Label Content="Выйти"
+                    </StackPanel>
+                </Border>
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 20 10 0" Style="{DynamicResource RightMenuElement}" VerticalAlignment="Bottom" MouseLeftButtonDown="Exit">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/Exit2.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Выйти"
                        VerticalContentAlignment="Center"
                        Width="auto"
                        Foreground="White"
                        FontSize="16"
                        FontFamily="Inter/#Inter-V.ttf"/>
-                </StackPanel>
+                    </StackPanel>
+                </Border>
             </StackPanel>
             
         </DockPanel>
