--- a/SolickManagerV3_4/Windows/EditOrAddApplication.xaml
+++ b/SolickManagerV3_4/Windows/EditOrAddApplication.xaml
@@ -303,7 +303,8 @@
                        FontSize="20"
                        FontFamily="Inter"
                        FontWeight="Medium"
-                       Text="Заявка"/>
+                       Text="Заявка"
+                       Margin="0 0 0 15"/>
             
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Дата"
@@ -323,7 +324,7 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal"
-                        Margin="0 20 0 0">
+                        Margin="0 10 0 0">
                 <TextBlock Text="Клиент"
                            Foreground="White"
                            FontFamily="Inter"
@@ -339,14 +340,93 @@
                         FontSize="14"
                         FontWeight="Medium"/>
             </StackPanel>
-            <Border>
-                <StackPanel>
+            <Border CornerRadius="5" Background="White" Padding="5" Margin="0 5 0 0" Visibility="Visible">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
                     <StackPanel>
-                        <Label Content="Имя"/>
-                        <TextBox/>
+                        <Label Height="24" Content="Имя" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                        <Label Height="24" Content="Фамилия" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                        <Label Height="24" Content="Отчество" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                        <Label Height="24" Content="Дата рождения" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                        <Label Height="24" Content="Номер телефона" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                            
                     </StackPanel>
-                </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5"/>
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5"/>
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5"/>
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5"/>
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5"/>
+                    </StackPanel>
+                </Grid>
             </Border>
+
+            <StackPanel Orientation="Horizontal"
+                        Margin="0 10 0 0">
+                <TextBlock Text="Устройство"
+                           Foreground="White"
+                           FontFamily="Inter"
+                           FontSize="16"
+                           Height="20"/>
+                <ComboBox Style="{DynamicResource ComboBoxRound}" 
+                          Width="125" 
+                          Margin="10 0" />
+                <Button Content="новый"
+                        Style="{DynamicResource ButtonRoundStyle}"
+                        Background="White"
+                        Width="70"
+                        FontSize="14"
+                        FontWeight="Medium"/>
+            </StackPanel>
+            <Border CornerRadius="5" Background="White" Padding="5" Margin="0 5 0 0" Visibility="Visible">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel>
+                        <Label Height="24" Content="Модель" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                        <Label Height="24" Content="Описание" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                        <Label Height="24" Content="Стоимость" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5"/>
+                        <TextBox Width="auto" MinHeight="24" Height="auto" TextWrapping="Wrap" Margin="0 0 0 5"/>
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5"/>
+                    </StackPanel>
+                </Grid>
+            </Border>
+
+            <Label Content="Проблема"  
+                   Foreground="White"
+                   FontFamily="Inter"
+                   FontSize="16"
+                   Height="28" 
+                   Margin="0 10 0 0"/>
+            <Border CornerRadius="5" Background="White" Padding="5" >
+                <TextBox Text="{Binding SelectedApplication.Diagnostics}"
+                                         Style="{DynamicResource RoundTextBox}"
+                                         TextWrapping="Wrap"
+                                         FontSize="12"
+                                         Foreground="Black"
+                                         FontFamily="Inter"
+                                         Width="290"
+                                         Height="90"
+                                         HorizontalAlignment="Center"/>
+            </Border>
+
+            <Button Style="{DynamicResource ButtonRoundStyle}"
+                    Content="Сохранить"
+                    Width="260"
+                    Margin="0 10 0 0"
+                    Height="35"
+                    Background="White"
+                    FontSize="20"
+                    FontWeight="Medium"
+                    FontFamily="Inter"/>
         </StackPanel>
     </Border>
 </Window>
